Electronics for kids intro - lessons 1 - 3

--- a/config.yaml
+++ b/config.yaml
@@ -134,3 +134,8 @@ social:
     twitter_domain : ""
     twitter        : "estranged"
     email          : ""
+
+markup:
+  goldmark:
+    renderer:
+      hardWraps: true
